packages/ui-library/src/css/inputs.scss
/* ... */
@mixin drop-down-styles {
    $option-padding: 7px 40px 7px 15px;

    .select-list {
        list-style: none;
        position: relative;
        background: $color-white;
        padding: 8px 0;
        max-height: 200px;
        overflow-y: scroll;

        // each item in dropdown
        .select-option,
        .none-option {
            // Note: decided not to use line-height here for alignment because it causes issues e.g. large font-sizes
            // will overlap, and also looks bad if one item overflows onto 2 lines
            padding: $option-padding;
            font-size: 14px;
            position: relative;
            line-height: 13px;
            color: $color-midnight;
            cursor: pointer;
            white-space: normal;

            &:hover,
            &.highlighted {
                background-color: $color-active-blue;
                color: $color-white;
                display: inline-block;
                min-width: 100%;

                &:before {
                    background-color: $color-white;
                }
            }
            &.disabled {
                background: none;
                color: $color-rabbit-fur;
            }
        }
        .help-hint-option {
            &.select-option {
                padding: 0;

                .help-tooltip {
                    display: block;
                }
                .help-tooltip-target {
                    display: block;
                    padding: $option-padding;
                }
            }
        }
        .selected {
            font-family: $font-pn-semibold;

            &:before {
                content: '';
                width: 3px;
                height: 3px;
                background-color: $color-midnight;
                display: inline-block;
                position: absolute;
                top: 12px;
                left: 7px;

                @include border-radius(1.5px);
            }
        }
        .none-option {
            font-style: italic;
            color: $color-elephant;
        }
    }
}
/* ... */

